# how_many

./: .flake8  .gitignore  AGENTS.md  README.md  how_many.py  how_many_build.py  peaks_detrend_standalone.py  pyproject.toml  verify_standalone.py
.github/workflows/: build.yml
docs/: bundle_size.md
docs/images/: how-many-demo.p
pyinstaller_hooks/: _qt_prune.py  hook-PySide6.QtGui.py  hook-PySide6.py
scripts/: build_exe.py
src/how_many/: __init__.py  __main__.py  _version.py  app.py  models.py
src/how_many/analysis/: __init__.py  core.py  peaks_detrend.py  screenshot.py
src/how_many/utils/: __init__.py  geometry.py  qt.py
tests/: test_auto_analyze_dots.py  test_auto_analyze_ten_dots.py  test_executable_selftest.py  test_formatting.py  test_peaks_detrend.py  test_screenshot_numpy.py  test_style.py
