[project]
name = "how-many"
version = "1.0"
description = "Always-on-top overlay for counting repeated image features."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.25",
    "opencv-python-headless>=4.9",
]

[dependency-groups]
build = [
    "pyinstaller>=6.14",
]
test = [
    "pytest>=8.3",
    "scipy==1.15.3",
    "hypothesis>=6.100",
    "tomli>=2.0.1",
    "black==24.10.0",
    "flake8==6.1.0",
    "flake8-docstrings==1.7.0",
    "flake8-isort==6.1.2",
    "flake8-noqa==1.4.0",
    "isort==5.13.2",
    "mypy==1.12.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.14",
    "pytest>=8.3",
    "scipy==1.15.3",
    "hypothesis>=6.100",
    "tomli>=2.0.1",
    "black==24.10.0",
    "flake8==6.1.0",
    "flake8-docstrings==1.7.0",
    "flake8-isort==6.1.2",
    "flake8-noqa==1.4.0",
    "isort==5.13.2",
    "mypy==1.12.0",
]

[project.scripts]
how-many = "how_many.app:main"

[tool.uv]
default-groups = ["build"]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.how-many]
scipy-reference-version = "1.15.3"

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
py_version = 310
atomic = true
quiet = true
force_sort_within_sections = true
group_by_package = true
remove_redundant_aliases = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
implicit_reexport = true
exclude = "venv|\\.venv|\\.tox|build|dist"

[tool.flake8]
max-line-length = 80
max-complexity = 18
select = "C,D,E,F,I,N,W,B,B950"
ignore = "E203,E501,W503,W191,E126,E128"
per-file-ignores = "./docs/conf.py:E101,./tests/*.py:N803,D102,D107"
exclude = """
    .eggs,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    __pycache__,
    build,
    dist,
    venv,
    .venv,
"""
